welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:21: error: expected start of definition
	override def run() { 
                 ^Methods:29: error: Unmatched closing brace '}' ignored here
}
^