welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
	var nbCase=0
	var nb=""
	do  {avance()
	     nbCase=nbCase+1
	     } while (estSurBiscuit()==false)
     }
     prendBiscuit()
     for (nb <- 1 to nbCase) {
     	avance()}
     	nbCase=0
     



}
